Style: Add bootstrap grid.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <h2>Welcome to the best pizza house</h2>
         </head>
         <div class="row ">
-            <div class="col-md-6 well">
+            <div class="col-md-1"></div>
+            <div class="col-md-5 well">
                 <form>
                     <h3>Fill out the order form and order pizza!</h3>
                     <div class="form-group">
@@ -76,7 +77,8 @@
                     <button type="submit" class="btn btn-info">Add Cart🛒</button>
                 </form>
             </div>
-            <div class="col-md-6 well" id="price">
+            <div class="col-md-1"></div>
+            <div class="col-md-4 well" id="cart">
                 <h2>Your cart:</h2>
                 <p>Pizza Size: <span class="size"></span></p>
                 <p>Your toppings: <span class=></span></p>
@@ -85,6 +87,7 @@
                 <p>$<span id="show"></span></p>
                 <button type="submit" class="btn btn-warning">Place Order🛎</button>
             </div>
+            <div class="col-md-1"></div>
         </div>
     </div>
 </body>
