Feat: Add protein, veggie, other toppings and size price functions.

--- a/index.html
+++ b/index.html
@@ -29,49 +29,55 @@
                             <option value="large">Large</option>
                         </select>
                     </div>
-                    <div class="form-group">
-                        <p>Pizza Toppings</p>
+                    <div class="form-group protein">
+                        <p>Pizza Toppings - Protein - $3.00</p>
                         <label for="pepperoni">
-                            <input id="pepperoni" type="checkbox" value="pepperoni">Pepperoni <br>
+                            <input id="pepperoni" type="checkbox" name="protein" value="pepperoni">Pepperoni <br>
                         </label>
                         <label for="ham">
-                            <input id="ham" type="checkbox" value="ham">Ham <br>
+                            <input id="ham" type="checkbox" name="protein" value="ham">Ham <br>
                         </label>
                         <label for="sausage">
-                            <input id="sausage" type="checkbox" value="sausage">Sausage <br>
+                            <input id="sausage" type="checkbox" name="protein" value="sausage">Sausage <br>
                         </label>
                         <label for="prosciutto">
-                            <input id="prosciutto" type="checkbox" value="prosciutto">Prosciutto <br>
+                            <input id="prosciutto" type="checkbox" name="protein" value="prosciutto">Prosciutto <br>
                         </label>
                         <label for="squid">
-                            <input id="squid" type="checkbox" value="squid">Squid <br>
+                            <input id="squid" type="checkbox" name="protein" value="squid">Squid <br>
                         </label>
                         <label for="anchovy">
-                            <input id="anchovy" type="checkbox" value="anchovy">Anchovy <br>
+                            <input id="anchovy" type="checkbox" name="protein" value="anchovy">Anchovy <br>
                         </label>
+                    </div>
+                    <div class="form-group veggies">
+                        <p>Pizza Toppings - Veggies - $2.00</p>
                         <label for="mushroom">
-                            <input id="mushroom" type="checkbox" value="mushroom">Mushroom <br>
+                            <input id="mushroom" type="checkbox" name="veggies" value="mushroom">Mushroom <br>
                         </label>
                         <label for="basil">
-                            <input id="basil" type="checkbox" value="basil">Basil <br>
+                            <input id="basil" type="checkbox" name="veggies" value="basil">Basil <br>
                         </label>
                         <label for="arugula">
-                            <input id="arugula" type="checkbox" value="arugula">Arugula <br>
+                            <input id="arugula" type="checkbox" name="veggies" value="arugula">Arugula <br>
                         </label>
                         <label for="pineapple">
-                            <input id="pineapple" type="checkbox" value="pineapple">Pineapple <br>
+                            <input id="pineapple" type="checkbox" name="veggies" value="pineapple">Pineapple <br>
                         </label>
                         <label for="artichokes">
-                            <input id="artichokes" type="checkbox" value="artichokes">Artichokes <br>
+                            <input id="artichokes" type="checkbox" name="veggies" value="artichokes">Artichokes <br>
                         </label>
+                    </div>
+                    <div class="form-group others">
+                        <p>Pizza Toppings - Others - $1.50</p>
                         <label for="extra-cheese">
-                            <input id="extra-cheese" type="checkbox" value="extra-cheese">Extra Cheese <br>
+                            <input id="extra-cheese" type="checkbox" name="others" value="extra-cheese">Extra Cheese <br>
                         </label>
                         <label for="chili-pepper">
-                                <input id="chili-pepper" type="checkbox" value="chili-pepper">Chili Pepper <br>
+                                <input id="chili-pepper" type="checkbox" name="others" value="chili-pepper">Chili Pepper <br>
                         </label>
                         <label for="jalapeno">
-                            <input id="jalapeno" type="checkbox" value="jalapeno">Jalapeño <br>
+                            <input id="jalapeno" type="checkbox" name="others" value="jalapeno">Jalapeño <br>
                         </label>
                     </div>
                     <button type="submit" class="btn btn-info">Add Cart🛒</button>
