Feat: Add createOrder function.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <div class="form-group">
                         <p>Pizza Size</p>
                         <select name="size" id="size">
+                            <option selected disabled>Select a size</option>
                             <option value="small">Small</option>
                             <option value="medium">Medium</option>
                             <option value="large">Large</option>
