Fix createOrder function - push selected values in array.

--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
                             <option value="large">Large</option>
                         </select>
                     </div>
-                    <div class="form-group protein">
+                    <div class="form-group proteins">
                         <p>Pizza Toppings - Protein - $3.00</p>
                         <label for="pepperoni">
-                            <input id="pepperoni" type="checkbox" name="protein" value="pepperoni">Pepperoni <br>
+                            <input id="pepperoni" type="checkbox" name="proteins" value="pepperoni">Pepperoni <br>
                         </label>
                         <label for="ham">
-                            <input id="ham" type="checkbox" name="protein" value="ham">Ham <br>
+                            <input id="ham" type="checkbox" name="proteins" value="ham">Ham <br>
                         </label>
                         <label for="sausage">
-                            <input id="sausage" type="checkbox" name="protein" value="sausage">Sausage <br>
+                            <input id="sausage" type="checkbox" name="proteins" value="sausage">Sausage <br>
                         </label>
                         <label for="prosciutto">
-                            <input id="prosciutto" type="checkbox" name="protein" value="prosciutto">Prosciutto <br>
+                            <input id="prosciutto" type="checkbox" name="proteins" value="prosciutto">Prosciutto <br>
                         </label>
                         <label for="squid">
-                            <input id="squid" type="checkbox" name="protein" value="squid">Squid <br>
+                            <input id="squid" type="checkbox" name="proteins" value="squid">Squid <br>
                         </label>
                         <label for="anchovy">
-                            <input id="anchovy" type="checkbox" name="protein" value="anchovy">Anchovy <br>
+                            <input id="anchovy" type="checkbox" name="proteins" value="anchovy">Anchovy <br>
                         </label>
                     </div>
                     <div class="form-group veggies">
