--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <head>
             <h1>Mama Loo's Pizza</h1>
-            <h2>Welcome to the best pizza house</h2>
+            <h2>Online Order Form</h2>
         </head>
         <div class="row ">
             <div class="col-md-1"></div>
@@ -81,24 +81,25 @@
                             <input id="jalapeno" type="checkbox" name="others" value="jalapeno">Jalapeño <br>
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-info">Add Cart🛒</button>
+                    <button type="submit" class="btn btn-info">Add Cart 🛒</button>
                 </form>
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-4 well" id="cart">
-                <h2>Your cart:</h2>
+                <h2>Your Cart</h2>
                 <p>Pizza Size: <span class="size"></span></p>
-                <p>Your toppings:
-                    <ul>
-                        <li>Protein: <span class="protein"></span></li>
-                        <li>Veggies: <span class="veggies"></span></li>
-                        <li>Others: <span class="others"></span></li>
-                    </ul>
-                </p>
+                <ul>
+                    <li>Protein: <span id="proteins-topping"></span></li>
+                    <li>Veggies: <span id="veggies-topping"></span></li>
+                    <li>Others: <span id="others-topping"></span></li>
+                </ul>
                 <!-- add order details -->
                 <h3>Your total price will be: </h3>
                 <p id="total">$<span id="show"></span></p>
-                <button type="submit" class="btn btn-warning">Place Order🛎</button>
+                <div class="buttons">
+                    <button type="submit" class="btn btn-info">Add More</button>
+                    <button type="submit" class="btn btn-warning">Place Order 🛎</button>
+                </div>
             </div>
             <div class="col-md-1"></div>
         </div>
